# boto3_delete_old_amis

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  __main__.py  delete.py  gazelle_python.yaml  how-to-setup-a-python-environment.md  requirements.txt
